--- a/locale/defaultMessages.json
+++ b/locale/defaultMessages.json
@@ -3642,6 +3642,10 @@
     "context": "GiftCardUpdateDetailsCard title",
     "string": "Details"
   },
+  "src_dot_giftCards_dot_GiftCardsList_dot_GiftCardsListTable_dot_GiftCardsListTableHeader_dot_deleteLabel": {
+    "context": "GiftCardEnableDisableSection enable label",
+    "string": "Delete"
+  },
   "src_dot_giftCards_dot_GiftCardsList_dot_GiftCardsListTable_dot_GiftCardsListTableHeader_dot_disableLabel": {
     "context": "GiftCardEnableDisableSection enable label",
     "string": "Deactivate"
@@ -3737,18 +3741,6 @@
   "src_dot_giftCards_dot_GiftCardsList_dot_settings": {
     "context": "GiftCardsListHeader menu item settings",
     "string": "Settings"
-  },
-  "src_dot_giftCards_dot_components_dot_GiftCardCustomerCard_dot_1782042241": {
-    "context": "button",
-    "string": "Deactivate"
-  },
-  "src_dot_giftCards_dot_components_dot_GiftCardCustomerCard_dot_3645414921": {
-    "context": "button",
-    "string": "Delete"
-  },
-  "src_dot_giftCards_dot_components_dot_GiftCardCustomerCard_dot_3865193889": {
-    "context": "button",
-    "string": "Activate"
   },
   "src_dot_giftCards_dot_components_dot_GiftCardCustomerCard_dot_customerGiftCardsAbsentSubtitle": {
     "context": "subtitle",
